# portfoliomanager

./: .gitignore  Makefile  README.md  degiroportfolio.py  portfolio-manager.ipynb  portfolio-manager.py  portfolio.old  portfolio.py  portfolio_manager.py  pyproject.toml
portfoliomanager/: __init__.py  degiroportfolio.py  portfolio.py  portfoliomanager.py
src/: degiroportfolio.py  portfolio.py  portfolio_manager.py  portfoliomanager.py
tests/: conftest.py  test_degiroportfolio.py  test_portfolio.py  test_portfolio_manager.py  test_portfoliomanager.py
tests/csv/: allocation_EUR.csv  allocation_GBP.csv  assets_EUR.csv  assets_GBP.csv
tests/pickles/: allocation_EUR.pickle  allocation_EUR_idx.pickle  allocation_GBP.pickle  allocation_GBP_idx.pickle  assets_EUR.pickle  assets_EUR_dropna.pickle  assets_GBP_idx.pickle  portfolio_EUR_columns.pickle  portfolio_EUR_conv.pickle  portfolio_EUR_idx.pickle  portfolio_GBP.pickle  portfolio_GBP_columns.pickle  portfolio_GBP_conv.pickle  portfolio_GBP_dropna.pickle  rebalance_no_sell_EUR.pickle  rebalance_no_sell_GBP.pickle  rebalance_sell_EUR.pickle  rebalance_sell_GBP.pickle  summary_EUR.pickle  summary_EUR_passing_no_sell.pickle  summary_GBP.pickle  summary_GBP_passing_no_sell.pickle
